--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "example_package",
+  "name": "@pratikjadhav080/example_package",
   "version": "0.0.1",
   "description": "example package for learning",
   "main": "index.js",
